<resources>
    <string name="app_name">Secu3Droid</string>
    <string name="title_activity_param">Parameters</string>
    <string name="menu_param">Parameters</string>
    <string name="pref_bluetooth_device_title">Choose Bluetooth Device</string>
    <string name="pref_bluetooth_device_summary">"Current device: %s"</string>
    <string name="pref_connection_retries_title">Connection retry number</string>
    <string name="pref_connection_retries_summary">Number of attempts before exiting: %s</string>
    <string name="pref_write_log_title">Sensors log writing</string>
    <string name="pref_write_log_summary">Writing information from sensors into a log</string>
    <string name="pref_write_binary_log_title">Write log in binary format (s3l)</string>
    <string name="pref_log_csv_write_title">Title in csv log file</string>
    <string name="pref_log_csv_delimeter_title">Log delimeter character</string>
    <string name="pref_wakelock_title">Allow app to run in the background</string>
    <string name="pref_wakelock_summary">Prevents disconnection and allows continuous log recording</string>
    <string name="pref_keep_screen_title">Keep screen active</string>
    <string name="pref_keep_screen_summary">Disable screen blank while connected to Secu</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary" />
    <string name="msg_bluetooth_disabled">Bluetooth is disabled</string>
    <string name="status_connecting">Connecting</string>
    <string name="title_activity_errors">Errors</string>
    <string name="title_activity_settings">Settings</string>
    <string name="back">Back</string>
    <string name="menu_errors">Errors</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_secu_logs">Secu logs</string>
    <string name="menu_raw_sensors">Raw values</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="menu_diagnostics_warning_title">WARNING! Disconnect ignition coils before entering diagnostic mode. Before testing of BL, DE outputs make sure that corresp. jumpers are opened!\nWARNING! Displayed inputs\' values are on the MCU lines, not on the external connector (there are differences).</string>
    <string name="about_title">About</string>
    <string name="about_version">Secu3Droid version</string>
    <string name="about_copyright_1">Copyright © %d Kosharskyi Vitalii</string>
    <string name="about_copyright_2">Copyright © %d Secu3Droid Project</string>
    <string name="about_app_desc">Secu3Droid is an application for managing Secu-3 ignition system. Secu-3 is an open source, free engine control unit, see <a href="http://secu-3.org"><b>http://secu-3.org</b></a>"</string>
    <string name="about_license">It is open source software distributed free of charge under the terms of the <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"><b>GNU General Public License</b></a>.</string>
    <string name="about_sources">The source code is available from Git repository on the project website: https://github.com/kosharskyi/secu3droid</string>
    <string name="permission_rationale_title">You need to grant permissions to work with the app</string>
    <string name="permission_rationale_message">The app doesn\'t collect your location data. This is restrictions of android to ask location permission with bluetooth</string>
    <string name="download_manager_permission_rationale_title">You need to grant permissions to download new version</string>
    <string name="download_manager_permission_rationale_message">This is restrictions of the Android OS to ask access to the storage to download files</string>
    <string-array name="diagnostics_fragments_title">
        <item>Inputs</item>
        <item>Outputs</item>
        <item>Chart</item>
    </string-array>
    <string-array name="inj_timing_specifies">
        <item>Beginning</item>
        <item>Middle</item>
        <item>End</item>
    </string-array>
    <string-array name="lambda_sensors_types">
        <item>NBO</item>
        <item>WBO</item>
    </string-array>
    <string-array name="accel_enrichment_types">
        <item>Acceler. pump</item>
        <item>Time based</item>
    </string-array>
    <string-array name="accel_wallwet_types">
        <item>OFF</item>
        <item>X-tau petrol</item>
        <item>X-tau gas</item>
        <item>X-tau pet. and gas</item>
    </string-array>
    <string-array name="load_measurement_items">
        <item>MAP</item>
        <item>MAP(baro)</item>
        <item>TPS</item>
        <item>MAP+TPS</item>
        <item>MAF</item>
    </string-array>
    <string-array name="barocorr_items">
        <item>Disabled</item>
        <item>Static MAP1</item>
        <item>Dynamic MAP1</item>
        <item>Dynamic MAP2</item>
    </string-array>
    <string-array name="ve2_map_func_items">
        <item>VE1</item>
        <item>VE1*VE2</item>
        <item>VE1+VE2</item>
    </string-array>
    <string-array name="ltft_mode_items">
        <item>Off</item>
        <item>Petrol</item>
        <item>Gas</item>
        <item>Petrol + Gas</item>
    </string-array>
    <string-array name="csv_delimeters" translatable="false">
        <item>\",\" Comma</item>
        <item>\";\" Semicolon</item>
        <item>\":\" Colon</item>
        <item>\"+\" Plus</item>
        <item>\"-\" Minus</item>
        <item>\"*\" Star</item>
        <item>\"|\" Stick</item>
    </string-array>
    <string-array name="csv_delimeters_values" translatable="false">
        <item>,</item>
        <item>;</item>
        <item>:</item>
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>|</item>
    </string-array>
    <string-array name="errors_ecu_errors_names">
        <item>Failures in working of CKP sensor - synchronization errors</item>
        <item>EEPROM parameters are damaged (CRC)</item>
        <item>Firmware code is damaged (CRC)</item>
        <item>Knock chip doesn\'t respond</item>
        <item>Detonation detected</item>
        <item>Breakage or wrong work of MAP sensor</item>
        <item>Breakage or wrong work of coolant temperature sensor</item>
        <item>Abnormal board voltage</item>
        <item>Dwell control</item>
        <item>Breakage or wrong work of cam sensor</item>
        <item>Breakage or wrong indications of TPS</item>
        <item>ADD_I1 input\'s sensor failure</item>
        <item>ADD_I2 input\'s sensor failure</item>
        <item>ADD_I3 input\'s sensor failure</item>
        <item>ADD_I4 input\'s sensor failure</item>
        <item>Firmware start (reset of processor)</item>
        <item>ADD_I5 input\'s sensor failure</item>
        <item>ADD_I6 input\'s sensor failure</item>
        <item>ADD_I7 input\'s sensor failure</item>
        <item>ADD_I8 input\'s sensor failure</item>
        <item>Oil pressure is very low</item>
        <item>Tables in EEPROM are broken (CRC)</item>
        <item>Reaching limit of injector\'s duty</item>
        <item>LTFT map data in EEPROM is currupted</item>
        <item>Stepper IAC fault</item>
        <item>Accelerator pedal position sensors failure</item>
    </string-array>
    <string-array name="logical_functions">
        <item>OR</item>
        <item>AND</item>
        <item>XOR</item>
        <item>2nd condition</item>
        <item>NONE</item>
    </string-array>
    <string name="uniout_condition_cts">Coolant temperature (°C)</string>
    <string name="uniout_condition_rpm">RPM (min-1)</string>
    <string name="uniout_condition_map">MAP (kPa)</string>
    <string name="uniout_condition_ubat">Board voltage (V)</string>
    <string name="uniout_condition_carb">Carburetor limit switch (logic)</string>
    <string name="uniout_condition_vspd">Vehicle speed (Km/h)</string>
    <string name="uniout_condition_airfl">Air flow (0..16)</string>
    <string name="uniout_condition_tmr">Timer (seconds)</string>
    <string name="uniout_condition_ittmr">Timer on ignition turn on (sec)</string>
    <string name="uniout_condition_estmr">Timer on engine turn on (sec)</string>
    <string name="uniout_condition_cpos">Choke/IAC position (\%%)</string>
    <string name="uniout_condition_aang">Ignition timing (°CS)</string>
    <string name="uniout_condition_klev">Knock signal (V)</string>
    <string name="uniout_condition_tps">TPS (\%%)</string>
    <string name="uniout_condition_ats">Intake ATS (°C)</string>
    <string name="uniout_condition_ai1">Analog input 1(V)</string>
    <string name="uniout_condition_ai2">Analog input 2(V)</string>
    <string name="uniout_condition_gasv">Gas valve input (logic)</string>
    <string name="uniout_condition_ipw">Injector PW (ms)</string>
    <string name="uniout_condition_ce">CE state</string>
    <string name="uniout_condition_oftmr">Timer on/off 1 cond. (sec)</string>
    <string name="uniout_condition_ai3">Analog input 3(V)</string>
    <string name="uniout_condition_ai4">Analog input 4(V)</string>
    <string name="uniout_condition_looptmr">Looper tmr. 1 cond. (sec.)</string>
    <string name="uniout_condition_ai5">Analog input 5(V)</string>
    <string name="uniout_condition_ai6">Analog input 6(V)</string>
    <string name="uniout_condition_ai7">Analog input 7(V)</string>
    <string name="uniout_condition_ai8">Analog input 8(V)</string>
    <string name="uniout_condition_grts">GRTS (°C)</string>
    <string name="uniout_condition_map2">MAP2 (kPa)</string>
    <string name="uniout_condition_temp2">TEMP2 (°C)</string>
    <string name="uniout_condition_input1">INPUT1 (logic)</string>
    <string name="uniout_condition_input2">INPUT2 (logic)</string>
    <string name="uniout_condition_maf">MAF (g/sec)</string>
    <string name="uniout_condition_tps_dot">TPS dot (\%%/sec)</string>
    <string name="uniout_condition_gps">GPS (kPa)</string>
    <string name="uniout_condition_fps">FPS (kPa)</string>
    <string name="uniout_condition_ops">OPS (kg/cm2)</string>
    <string name="uniout_condition_egts">EGTS (C)</string>
    <string name="uniout_condition_fts">FTS (C)</string>
    <string name="uniout_condition_ots">OTS (C)</string>
    <string name="uniout_condition_load">Load</string>
    <string name="title_activity_diagnostics">Diagnostics</string>
    <string name="diagnostics_not_supported_title">Diagnostics option disabled in your firmware or Secu-3 device not connected</string>
    <string name="diag_enable_bl_de">Enable testing of BL/DE outputs</string>
    <string name="diag_enable_tach_o">Enable testing of the TACH_O output</string>
    <string name="diag_bl_de_warning">Before testing of BL, DE outputs make sure that corresp. jumpers are opened!\nWARNING! Displayed inputs\' values are on the MCU lines, not on the external connector (there are differences)</string>
    <string name="choose_bluetooth_adapter">Choose Bluetooth adapter in the settings</string>
    <string name="units_empty" translatable="false"> </string>
    <string name="units_rpm">rpm</string>
    <string name="units_liter">L</string>
    <string name="units_cc_per_min">cc/min</string>
    <string name="units_hertz">Hz</string>
    <string name="units_degree">°</string>
    <string name="enable_bluetooth_to_start_work">Enable bluetooth to start work</string>
    <string name="try_again">Try again</string>
    <string name="secu_device_is_not_selected">Bluetooth device is not selected</string>
    <string name="select_bluetooth_device">Select Bluetooth device</string>
    <string name="bluetooth_device_not_valid">Previously configured Bluetooth device not valid</string>
    <string name="open_settings">Open settings</string>
    <string name="log_start_writing">Start writing</string>
    <string name="stop">Stop</string>
    <string name="mark_1">Insert mark 1</string>
    <string name="mark_2">Insert mark 2</string>
    <string name="mark_3">Insert mark 3</string>
</resources>