<?xml version="1.0" encoding="utf-8"?>
<!--
   SecuDroid  - An open source, free manager for SECU-3 engine control unit
   Copyright (C) 2020 Vitaliy O. Kosharskiy. Ukraine, Kharkiv

   SECU-3  - An open source, free engine control unit
   Copyright (C) 2007 Alexey A. Shabelnikov. Ukraine, Kyiv

   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>.

   contacts:
              http://secu-3.org
              email: vetalkosharskiy@gmail.com
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_dashboard"
		android:title="@string/menu_dashboard"
		android:icon="@android:drawable/ic_menu_preferences"/>

	<item
		android:id="@+id/menu_params"
		android:title="@string/menu_param"
		app:showAsAction="ifRoom"
		android:icon="@android:drawable/ic_menu_manage"/>

	<item
		android:id="@+id/menu_errors"
		android:title="@string/menu_errors"
		app:showAsAction="ifRoom"
		android:icon="@drawable/ic_menu_errors"/>

	<item
		android:id="@+id/menu_diagnostics"
		android:title="@string/menu_diagnostics"
		android:icon="@android:drawable/ic_menu_agenda"/>

	<item
		android:id="@+id/menu_preferences"
		android:title="@string/menu_preferences"
		android:icon="@android:drawable/ic_menu_preferences"/>

	<item
		android:id="@+id/menu_exit"
		android:title="@string/menu_exit"
		android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
</menu>