<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    SecuDroid  - An open source, free manager for SECU-3 engine control unit
  ~    Copyright (C) 2024 Vitaliy O. Kosharskyi. Ukraine, Kyiv
  ~
  ~    SECU-3  - An open source, free engine control unit
  ~    Copyright (C) 2007-2024 Alexey A. Shabelnikov. Ukraine, Kyiv
  ~
  ~    This program is free software: you can redistribute it and/or modify
  ~    it under the terms of the GNU General Public License as published by
  ~    the Free Software Foundation, either version 3 of the License, or
  ~    (at your option) any later version.
  ~
  ~    This program is distributed in the hope that it will be useful,
  ~    but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~    GNU General Public License for more details.
  ~
  ~    You should have received a copy of the GNU General Public License
  ~    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~    contacts:
  ~                    http://secu-3.org
  ~                    email: vetalkosharskiy@gmail.com
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sensors.SensorsTabsFragment"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabMode="fixed"
        android:background="@color/colorPrimary"
        tools:ignore="SpeakableTextPresentCheck"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logger_barrier"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/logger_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:barrierDirection="top"
        app:constraint_referenced_ids="log_start,log_mark_1,log_mark_2,log_mark_3,log_stop"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/log_mark_btns_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="log_mark_1,log_mark_2,log_mark_3,log_stop"
        android:visibility="gone"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_mark_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/log_mark_2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:text="@string/mark_1"
        android:gravity="center"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_mark_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/log_mark_1"
        app:layout_constraintEnd_toStartOf="@id/log_mark_3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:text="@string/mark_2"
        android:gravity="center"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_mark_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/log_mark_2"
        app:layout_constraintEnd_toStartOf="@id/log_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:text="@string/mark_3"
        android:gravity="center"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/log_mark_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:text="@string/stop"
        />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:text="@string/log_start_writing"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>