<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.diagnostics.DiagnosticAdditionalDialogFragment"
    >


    <TextView
        android:id="@+id/bl_de_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/diag_bl_de_warning"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        />

    <CheckBox
        android:id="@+id/enable_bl_de"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bl_de_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/diag_enable_bl_de"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        tools:checked="true"
        />

    <CheckBox
        android:id="@+id/enable_tach_o"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enable_bl_de"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/diag_enable_tach_o"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        tools:checked="true"
        />

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enable_tach_o"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:text="@android:string/ok"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enable_tach_o"
        app:layout_constraintEnd_toStartOf="@id/ok_btn"
        android:layout_marginTop="32dp"
        android:text="@android:string/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        />

</androidx.constraintlayout.widget.ConstraintLayout>