<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    SecuDroid  - An open source, free manager for SECU-3 engine control unit
  ~    Copyright (C) 2021 Vitaliy O. Kosharskiy. Ukraine, Kharkiv
  ~
  ~    SECU-3  - An open source, free engine control unit
  ~    Copyright (C) 2007 Alexey A. Shabelnikov. Ukraine, Kyiv
  ~
  ~    This program is free software: you can redistribute it and/or modify
  ~    it under the terms of the GNU General Public License as published by
  ~    the Free Software Foundation, either version 3 of the License, or
  ~    (at your option) any later version.
  ~
  ~    This program is distributed in the hope that it will be useful,
  ~    but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~    GNU General Public License for more details.
  ~
  ~    You should have received a copy of the GNU General Public License
  ~    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~    contacts:
  ~                    http://secu-3.org
  ~                    email: vetalkosharskiy@gmail.com
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bluetoothStatus.BluetoothStatusFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/bt_disabled_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="bt_disabled_icon,bt_disabled_text,bt_disabled_button"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/bt_disabled_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:src="@drawable/ic_bluetooth_disabled"
        />

    <TextView
        android:id="@+id/bt_disabled_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_disabled_icon"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:gravity="center_horizontal"
        android:text="@string/enable_bluetooth_to_start_work"
        android:textSize="22sp"
        />

    <Button
        android:id="@+id/bt_disabled_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_disabled_text"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginTop="16dp"
        android:text="@string/try_again"
        />





    <androidx.constraintlayout.widget.Group
        android:id="@+id/bt_settings_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="bt_settings_icon,bt_settings_text,bt_settings_button"
        android:visibility="gone"

        />

    <ImageView
        android:id="@+id/bt_settings_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:src="@drawable/ic_settings_bluetooth"
        />

    <TextView
        android:id="@+id/bt_settings_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_settings_icon"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/secu_device_is_not_selected"
        android:textSize="22sp"
        />

    <Button
        android:id="@+id/bt_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_settings_text"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginTop="16dp"
        android:text="@string/select_bluetooth_device"
        />





    <androidx.constraintlayout.widget.Group
        android:id="@+id/bt_uuid_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="bt_uuid_icon,bt_uuid_text,bt_uuid_button"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <ImageView
        android:id="@+id/bt_uuid_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:src="@drawable/ic_settings_bluetooth"
        />

    <TextView
        android:id="@+id/bt_uuid_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_uuid_icon"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/bluetooth_device_not_valid"
        android:textSize="22sp"
        />

    <Button
        android:id="@+id/bt_uuid_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_uuid_text"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginTop="16dp"
        android:text="@string/open_settings"
        />


</androidx.constraintlayout.widget.ConstraintLayout>